fix: major parsing cleanup for evidence and parameters

--- a/lib/interface/dune
+++ b/lib/interface/dune
@@ -1,9 +1,4 @@
 (library
     (name interface)
-    (libraries core data lwt lwt.unix)
-)
-(ocamllex lexer)
-
-(menhir
-    (modules parser)
+    (libraries core data lwt lwt.unix AST)
 )
